# FastApiTestProject

./: .gitignore  pyproject.toml
app/: config.py  db_code.py  db_create.py  db_tables.py  log_db  main.py  oath2.py  schema.py
app/routers/: auth.py  posts.py  users.py  votes.py
