[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = ["egor_nikitin"]
readme = "README.md"

[tool.poetry.dependencies]
anyio==3.7.0
bcrypt==4.0.1
cffi==1.15.1
click==8.1.3
cryptography==41.0.1
db-code==0.0.0
db-create==0.0.0
db-tables==0.0.0
dnspython==2.3.0
ecdsa==0.18.0
email-validator==2.0.0.post2
fastapi==0.98.0
h11==0.14.0
httptools==0.5.0
idna==3.4
passlib==1.7.4
psycopg2==2.9.6
pyasn1==0.5.0
pycparser==2.21
pydantic==1.10.9
python-dotenv==1.0.0
python-jose==3.3.0
python-multipart==0.0.6
PyYAML==6.0
rsa==4.9
six==1.16.0
sniffio==1.3.0
starlette==0.27.0
typing_extensions==4.6.3
uvicorn==0.22.0
uvloop==0.17.0
watchfiles==0.19.0
websockets==11.0.3


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
